--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -2,18 +2,12 @@
   @apply grid grid-cols-1 gap-5 lg:grid-cols-2;
   &-item {
     @apply flex flex-col gap-5 p-5 bg-main-black-lighter text-base transition-opacity;
-    &[data-in-deck-when-adding="true"]{
-      @apply opacity-30 pointer-events-none;
-    }
     &__header {
       @apply flex flex-col gap-2.5 items-start text-lg leading-none md:gap-5 md:flex-row md:justify-between md:items-center;
       &-mana {
         @apply flex flex-wrap justify-end h-min;
         img {
-          @apply h-min;
-        }
-        span{
-          @apply block mt-0.5 mr-1;
+          @apply h-[1em];
         }
       }
     }
@@ -24,12 +18,15 @@
       @apply text-sm mt-2.5 mb-2.5;
     }
     &__footer {
-      @apply flex h-10 mt-auto items-center justify-between;
+      @apply flex mt-auto items-center justify-between;
       &-add {
-        @apply text-2xl h-full bg-main-black aspect-square text-mana-blue;
-        &:disabled {
-          @apply cursor-not-allowed grayscale;
-        }
+        @apply text-2xl w-10 h-10 bg-main-black aspect-square text-main-white;
+      }
+      &-amount {
+        @apply block h-min text-mana-gray;
+      }
+      &-wrapper {
+        @apply flex items-center gap-2;
       }
     }
   }
